# quantalithos-bus

./: Cargo.toml
artifacts/test/: README.md
artifacts/test/20260530T142302Z-commit-05-a/: evidence-index.json
artifacts/test/20260530T150256Z-commit-05-b/: evidence-index.json
artifacts/test/20260531T015941Z-commit-06-a/: evidence-index.json
artifacts/test/20260531T024326Z-commit-06-b/: evidence-index.json
artifacts/test/20260531T032048Z-commit-07-a/: evidence-index.json
artifacts/test/20260531T035026Z-commit-07-b/: evidence-index.json
artifacts/test/20260531T042454Z-commit-08-a/: evidence-index.json
artifacts/test/20260531T080000Z-commit-08-b/: evidence-index.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  query.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/tests/: feedback.rs  output.rs  recovery.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: commands.rs  events.rs  fixtures.rs  jobs.rs  lib.rs  metadata.rs  queries.rs  receipts.rs  views.rs
crates/domain/: Cargo.toml
crates/domain/src/: audit.rs  backend.rs  delivery.rs  errors.rs  feedback.rs  idempotency.rs  lib.rs  publication.rs  read_output.rs  recovery.rs
crates/infra/: Cargo.toml
crates/infra/src/: id.rs  lib.rs  observability.rs  repositories.rs  source.rs  store.rs  time.rs  uow.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
fixtures/config/negative/: raw-secret.json  reload-request.json  secret-unavailable.json  unsupported-key.json
fixtures/config/profiles/: ci-test.json  integration-test.json  operations-recovery.json
reports/: README.md
reports/acceptance/: 20260531T042454Z-commit-08-a-index.md  20260531T080000Z-commit-08-b-handoff.json  20260531T080000Z-commit-08-b-index.md  20260531T080000Z-commit-08-b-veto.json  README.md  handoff.md  open-issues.md  risk-acceptance.md  veto-checklist.md
reports/review/: 20260531T080000Z-commit-08-b-agent-review.md  README.md
reports/runs/: README.md
reports/runs/20260530T090153Z-commit-02-b/: EV-BUS-PUB.md
reports/runs/20260530T095936Z-commit-03-a/: EV-BUS-SEM-DLV-BND.md
scripts/: common.sh
scripts/checks/: check_acceptance_materials.sh  check_artifact_layout.sh  check_config_summary.sh  check_redaction.sh  check_report_links.sh
scripts/gates/: run_ci_gate.sh  run_nightly_gate.sh  run_pr_gate.sh  run_release_gate.sh
scripts/reports/: generate_acceptance_handoff.sh  generate_acceptance_index.sh  generate_reports.sh  generate_veto_checklist.sh
(+127 files in other folders)
