[workspace]
members = [
    "crates/contracts",
    "crates/domain",
    "crates/application",
    "crates/infra",
    "crates/api",
    "crates/worker",
    "crates/jobs",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
bus-application = { path = "crates/application" }
bus-contracts = { path = "crates/contracts" }
bus-domain = { path = "crates/domain" }
core-contracts = { path = "../quantalithos-core/crates/contracts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
